Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/UPrimitiveComponent.h

	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_AlwaysLoadOnClient_GET(UPrimitiveComponent* Ptr) { return Ptr->AlwaysLoadOnClient; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_AlwaysLoadOnClient_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->AlwaysLoadOnClient = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_AlwaysLoadOnServer_GET(UPrimitiveComponent* Ptr) { return Ptr->AlwaysLoadOnServer; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_AlwaysLoadOnServer_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->AlwaysLoadOnServer = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bAffectDistanceFieldLighting_GET(UPrimitiveComponent* Ptr) { return Ptr->bAffectDistanceFieldLighting; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bAffectDistanceFieldLighting_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bAffectDistanceFieldLighting = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bAffectDynamicIndirectLighting_GET(UPrimitiveComponent* Ptr) { return Ptr->bAffectDynamicIndirectLighting; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bAffectDynamicIndirectLighting_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bAffectDynamicIndirectLighting = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bAllowCullDistanceVolume_GET(UPrimitiveComponent* Ptr) { return Ptr->bAllowCullDistanceVolume; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bAllowCullDistanceVolume_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bAllowCullDistanceVolume = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bAlwaysCreatePhysicsState_GET(UPrimitiveComponent* Ptr) { return Ptr->bAlwaysCreatePhysicsState; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bAlwaysCreatePhysicsState_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bAlwaysCreatePhysicsState = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bApplyImpulseOnDamage_GET(UPrimitiveComponent* Ptr) { return Ptr->bApplyImpulseOnDamage; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bApplyImpulseOnDamage_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bApplyImpulseOnDamage = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsDynamic_GET(UPrimitiveComponent* Ptr) { return Ptr->bAttachedToStreamingManagerAsDynamic; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsDynamic_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bAttachedToStreamingManagerAsDynamic = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsStatic_GET(UPrimitiveComponent* Ptr) { return Ptr->bAttachedToStreamingManagerAsStatic; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsStatic_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bAttachedToStreamingManagerAsStatic = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastCinematicShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastCinematicShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastCinematicShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastCinematicShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastDynamicShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastDynamicShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastDynamicShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastDynamicShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastFarShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastFarShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastFarShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastFarShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastHiddenShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastHiddenShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastHiddenShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastHiddenShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastInsetShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastInsetShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastInsetShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastInsetShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastShadowAsTwoSided_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastShadowAsTwoSided; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastShadowAsTwoSided_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastShadowAsTwoSided = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastStaticShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastStaticShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastStaticShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastStaticShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastVolumetricTranslucentShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastVolumetricTranslucentShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastVolumetricTranslucentShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastVolumetricTranslucentShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bForceMipStreaming_GET(UPrimitiveComponent* Ptr) { return Ptr->bForceMipStreaming; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bForceMipStreaming_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bForceMipStreaming = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bHandledByStreamingManagerAsDynamic_GET(UPrimitiveComponent* Ptr) { return Ptr->bHandledByStreamingManagerAsDynamic; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bHandledByStreamingManagerAsDynamic_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bHandledByStreamingManagerAsDynamic = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bHasMotionBlurVelocityMeshes_GET(UPrimitiveComponent* Ptr) { return Ptr->bHasMotionBlurVelocityMeshes; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bHasMotionBlurVelocityMeshes_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bHasMotionBlurVelocityMeshes = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bHasPerInstanceHitProxies_GET(UPrimitiveComponent* Ptr) { return Ptr->bHasPerInstanceHitProxies; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bHasPerInstanceHitProxies_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bHasPerInstanceHitProxies = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bIgnoreRadialForce_GET(UPrimitiveComponent* Ptr) { return Ptr->bIgnoreRadialForce; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bIgnoreRadialForce_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bIgnoreRadialForce = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bIgnoreRadialImpulse_GET(UPrimitiveComponent* Ptr) { return Ptr->bIgnoreRadialImpulse; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bIgnoreRadialImpulse_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bIgnoreRadialImpulse = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bIgnoreStreamingManagerUpdate_GET(UPrimitiveComponent* Ptr) { return Ptr->bIgnoreStreamingManagerUpdate; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bIgnoreStreamingManagerUpdate_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bIgnoreStreamingManagerUpdate = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bLightAsIfStatic_DEPRECATED_GET(UPrimitiveComponent* Ptr) { return Ptr->bLightAsIfStatic_DEPRECATED; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bLightAsIfStatic_DEPRECATED_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bLightAsIfStatic_DEPRECATED = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bLightAttachmentsAsGroup_GET(UPrimitiveComponent* Ptr) { return Ptr->bLightAttachmentsAsGroup; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bLightAttachmentsAsGroup_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bLightAttachmentsAsGroup = Value; }
	DOTNET_EXPORT auto E_UPrimitiveComponent_UnWeldFromParent(UPrimitiveComponent* Self)
	{
		Self->UnWeldFromParent();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_UpdatePhysicsToRBChannels(UPrimitiveComponent* Self)
	{
		((E_PROTECTED_WRAP_UPrimitiveComponent*)Self)->UpdatePhysicsToRBChannels_WRAP();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_UsesOnlyUnlitMaterials(UPrimitiveComponent* Self)
	{
		return Self->UsesOnlyUnlitMaterials();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_WakeAllRigidBodies(UPrimitiveComponent* Self)
	{
		Self->WakeAllRigidBodies();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_WakeRigidBody(UPrimitiveComponent* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		Self->WakeRigidBody(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_WeldTo(UPrimitiveComponent* Self, USceneComponent* InParent, char* InSocketName)
	{
		auto _p0 = InParent;
		auto _p1 = ConvertFromManage_FName(InSocketName);
		Self->WeldTo(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_WeldToImplementation(UPrimitiveComponent* Self, USceneComponent* InParent, char* ParentSocketName, bool bWeldSimulatedChild)
	{
		auto _p0 = InParent;
		auto _p1 = ConvertFromManage_FName(ParentSocketName);
		auto _p2 = bWeldSimulatedChild;
		return Self->WeldToImplementation(_p0, _p1, _p2);
	}