Plugins/UnrealDotNet/Source/UnrealEngineSharp/Generate/Class/UPrimitiveComponent.cs

		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_UnWeldFromParent(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_UpdatePhysicsToRBChannels(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UPrimitiveComponent_UsesOnlyUnlitMaterials(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_WakeAllRigidBodies(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_WakeRigidBody(IntPtr self, string boneName);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UPrimitiveComponent_WeldTo(IntPtr self, IntPtr inParent, string inSocketName);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UPrimitiveComponent_WeldToImplementation(IntPtr self, IntPtr inParent, string parentSocketName, bool bWeldSimulatedChild);
		
		#endregion
		
		#region Property
		public byte AlwaysLoadOnClient
		{
			get => E_PROP_UPrimitiveComponent_AlwaysLoadOnClient_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_AlwaysLoadOnClient_SET(NativePointer, value);
		}

		public byte AlwaysLoadOnServer
		{
			get => E_PROP_UPrimitiveComponent_AlwaysLoadOnServer_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_AlwaysLoadOnServer_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Controls whether the primitive should affect dynamic distance field lighting methods.  This flag is only used if CastShadow is true. </para>
		/// </summary>
		public byte bAffectDistanceFieldLighting
		{
			get => E_PROP_UPrimitiveComponent_bAffectDistanceFieldLighting_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bAffectDistanceFieldLighting_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Controls whether the primitive should inject light into the Light Propagation Volume.  This flag is only used if CastShadow is true. </para>
		/// </summary>
		public byte bAffectDynamicIndirectLighting
		{
			get => E_PROP_UPrimitiveComponent_bAffectDynamicIndirectLighting_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bAffectDynamicIndirectLighting_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether to accept cull distance volumes to modify cached cull distance. </para>
		/// </summary>
		public byte bAllowCullDistanceVolume
		{
			get => E_PROP_UPrimitiveComponent_bAllowCullDistanceVolume_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bAllowCullDistanceVolume_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Indicates if we'd like to create physics state all the time (for collision and simulation). </para>
		/// <para>If you set this to false, it still will create physics state if collision or simulation activated. </para>
		/// <para>This can help performance if you'd like to avoid overhead of creating physics state when triggers </para>
		/// </summary>
		public byte bAlwaysCreatePhysicsState
		{
			get => E_PROP_UPrimitiveComponent_bAlwaysCreatePhysicsState_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bAlwaysCreatePhysicsState_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>True for damage to this component to apply physics impulse, false to opt out of these impulses. </para>
		/// </summary>
		public byte bApplyImpulseOnDamage
		{
			get => E_PROP_UPrimitiveComponent_bApplyImpulseOnDamage_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bApplyImpulseOnDamage_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether this primitive is referenced by a FDynamicTextureInstanceManager </para>
		/// </summary>
		public byte bAttachedToStreamingManagerAsDynamic
		{
			get => E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsDynamic_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsDynamic_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether this primitive is referenced by a FLevelTextureManager </para>
		/// </summary>
		public byte bAttachedToStreamingManagerAsStatic
		{
			get => E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsStatic_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsStatic_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether this component should cast shadows from lights that have bCastShadowsFromCinematicObjectsOnly enabled. </para>
		/// <para>This is useful for characters in a cinematic with special cinematic lights, where the cost of shadowmap rendering of the environment is undesired. </para>
		/// </summary>
		public byte bCastCinematicShadow
		{
			get => E_PROP_UPrimitiveComponent_bCastCinematicShadow_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bCastCinematicShadow_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Controls whether the primitive should cast shadows in the case of non precomputed shadowing.  This flag is only used if CastShadow is true. </para>
		/// </summary>
		public byte DynamicShadow
		{
			get => E_PROP_UPrimitiveComponent_bCastDynamicShadow_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bCastDynamicShadow_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>When enabled, the component will be rendering into the far shadow cascades (only for directional lights). </para>
		/// </summary>
		public byte FarShadow
		{
			get => E_PROP_UPrimitiveComponent_bCastFarShadow_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bCastFarShadow_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>If true, the primitive will cast shadows even if bHidden is true. </para>
		/// <para>Controls whether the primitive should cast shadows when hidden. </para>
		/// <para>This flag is only used if CastShadow is true. </para>
		/// </summary>
		public byte HiddenShadow
		{
			get => E_PROP_UPrimitiveComponent_bCastHiddenShadow_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bCastHiddenShadow_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether this component should create a per-object shadow that gives higher effective shadow resolution. </para>
		/// <para>Useful for cinematic character shadowing. Assumed to be enabled if bSelfShadowOnly is enabled. </para>
		/// </summary>
		public byte DynamicInsetShadow
		{
			get => E_PROP_UPrimitiveComponent_bCastInsetShadow_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bCastInsetShadow_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether this primitive should cast dynamic shadows as if it were a two sided material. </para>
		/// </summary>
		public byte ShadowTwoSided
		{
			get => E_PROP_UPrimitiveComponent_bCastShadowAsTwoSided_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bCastShadowAsTwoSided_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether the object should cast a static shadow from shadow casting lights.  This flag is only used if CastShadow is true. </para>
		/// </summary>
		public byte StaticShadow
		{
			get => E_PROP_UPrimitiveComponent_bCastStaticShadow_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bCastStaticShadow_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether the object should cast a volumetric translucent shadow. </para>
		/// <para>Volumetric translucent shadows are useful for primitives with smoothly changing opacity like particles representing a volume, </para>
		/// <para>But have artifacts when used on highly opaque surfaces. </para>
		/// </summary>
		public byte VolumetricTranslucentShadow
		{
			get => E_PROP_UPrimitiveComponent_bCastVolumetricTranslucentShadow_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bCastVolumetricTranslucentShadow_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>If true, forces mips for textures used by this component to be resident when this component's level is loaded. </para>
		/// </summary>
		public byte bForceMipStreaming
		{
			get => E_PROP_UPrimitiveComponent_bForceMipStreaming_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bForceMipStreaming_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether this primitive is handled as dynamic, although it could have no references </para>
		/// </summary>
		public byte bHandledByStreamingManagerAsDynamic
		{
			get => E_PROP_UPrimitiveComponent_bHandledByStreamingManagerAsDynamic_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bHandledByStreamingManagerAsDynamic_SET(NativePointer, value);
		}

		public byte bHasMotionBlurVelocityMeshes
		{
			get => E_PROP_UPrimitiveComponent_bHasMotionBlurVelocityMeshes_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bHasMotionBlurVelocityMeshes_SET(NativePointer, value);
		}

		public byte bHasPerInstanceHitProxies
		{
			get => E_PROP_UPrimitiveComponent_bHasPerInstanceHitProxies_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bHasPerInstanceHitProxies_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Will ignore radial forces applied to this component. </para>
		/// </summary>
		public byte bIgnoreRadialForce
		{
			get => E_PROP_UPrimitiveComponent_bIgnoreRadialForce_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bIgnoreRadialForce_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Will ignore radial impulses applied to this component. </para>
		/// </summary>
		public byte bIgnoreRadialImpulse
		{
			get => E_PROP_UPrimitiveComponent_bIgnoreRadialImpulse_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bIgnoreRadialImpulse_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>When true, texture streaming manager won't update the component state. Used to perform early exits when updating component. </para>
		/// </summary>
		public byte bIgnoreStreamingManagerUpdate
		{
			get => E_PROP_UPrimitiveComponent_bIgnoreStreamingManagerUpdate_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bIgnoreStreamingManagerUpdate_SET(NativePointer, value);
		}

		public byte bLightAsIfStatic_DEPRECATED
		{
			get => E_PROP_UPrimitiveComponent_bLightAsIfStatic_DEPRECATED_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bLightAsIfStatic_DEPRECATED_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether to light this component and any attachments as a group.  This only has effect on the root component of an attachment tree. </para>
		/// <para>When enabled, attached component shadowing settings like bCastInsetShadow, bCastVolumetricTranslucentShadow, etc, will be ignored. </para>
		/// <para>This is useful for improving performance when multiple movable components are attached together. </para>
		/// </summary>
		public byte bLightAttachmentsAsGroup
		{
			get => E_PROP_UPrimitiveComponent_bLightAttachmentsAsGroup_GET(NativePointer);
			set => E_PROP_UPrimitiveComponent_bLightAttachmentsAsGroup_SET(NativePointer, value);
		}

